:sparkles: Removed scrollbars & fixed scrollbar

--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -13,12 +13,16 @@
 
 html,body {
     height: 100%;
-    width: 100%;
+    width: 100vw;
     margin: 0;
     padding: 0;
     font-family: var(--text-font);
     background-color: var(--bg-color);
     color: var(--text-color);
+}
+
+html::-webkit-scrollbar {
+    display: none;
 }
 
 a {
@@ -39,7 +43,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border-radius: 0 0 10px 10px;
+    /* border-radius: 0 0 10px 10px; */
     background-color: var(--bg-color);
 }
 
